test-cases/negative/test_099_while_wrong_type.lay
# negative test: while condition with non-boolean
# expected: type checker should catch this

while 5 do
  print 'hello'
end while


